[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Interface/Menu/ADAtivo 2.png" type="Texture" id=1]
[ext_resource path="res://Scenes/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Interface/Menu/EdiçãoTelaInstrução.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Interface/Menu/BotãoX.png" type="Texture" id=4]
[ext_resource path="res://Audios/Beep.wav-8a40c87ada5a0fb3b17e7da786a6259a.sample" type="AudioStream" id=7]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.286275, 0.0705882, 0.282353, 0.478431 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 961.566, 549 )
scale = Vector2( 0.807823, 0.813843 )
texture = ExtResource( 1 )

[node name="Return" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 817.566
margin_top = 285.0
margin_right = 1119.57
margin_bottom = 381.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 833.566
margin_top = 493.0
margin_right = 1113.57
margin_bottom = 587.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 817.566
margin_top = 685.0
margin_right = 1123.57
margin_bottom = 781.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LayoutControles" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 542 )
scale = Vector2( 1, 1.0037 )
texture = ExtResource( 3 )

[node name="BotãoX" type="Button" parent="LayoutControles"]
margin_left = -928.0
margin_top = -508.12
margin_right = -394.0
margin_bottom = 25.8801
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotãoX" type="Sprite" parent="LayoutControles/BotãoX"]
position = Vector2( 48, 47.8231 )
scale = Vector2( 0.179775, 0.179113 )
texture = ExtResource( 4 )

[node name="Buttom" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="mouse_entered" from="Return" to="." method="_on_Return_mouse_entered"]
[connection signal="pressed" from="Return" to="." method="_on_Return_pressed"]
[connection signal="mouse_entered" from="Control" to="." method="_on_Control_mouse_entered"]
[connection signal="pressed" from="Control" to="." method="_on_Control_pressed"]
[connection signal="mouse_entered" from="Quit" to="." method="_on_Quit_mouse_entered"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="mouse_entered" from="LayoutControles/BotãoX" to="." method="_on_BotoX_mouse_entered"]
[connection signal="pressed" from="LayoutControles/BotãoX" to="." method="_on_BotoX_pressed"]
